--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,23 @@
 * {
     font-family: "Roboto", sans-serif, system-ui;
     font-size: 12px;
-    background-color: var(--background-main);
+    background-color: var(--background-sub);
     color: white;
 }
 
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
 }
 
 button, a {
     cursor: pointer;
+}
+
+a {
+    text-decoration: none;
 }
 
 button:hover,
@@ -29,7 +35,11 @@ button:focus {
 .container {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 3fr 0.05fr;
+    row-gap: 1rem;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .container > .navBar {
@@ -40,9 +50,13 @@ button:focus {
     align-items: center;
     background-color: var(--background-sub);
     padding: 0 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .container > .navBar > p,
+.container > .navBar button,
 .container > .navBar > .navButtons,
 .container > .navBar > .navButtons button {
     background-color: inherit;
@@ -58,10 +72,82 @@ button:focus {
     gap: 1.5rem;
 }
 
+.container > .navBar button,
 .container > .navBar > .navButtons button {
     border: 2px solid var(--border-color);
     border-radius: 4px;
     font-size: 18px;
     background-color: var(--background-inner);
     color: var(--border-color);
+}
+
+.container > .sidebar {
+    grid-row: 2;
+    background-color: var(--background-main);
+}
+
+.container > .sidebar.left {
+    grid-column: 1;
+}
+
+.container > .sidebar.right {
+    grid-column: 3;
+}
+
+.container > .booksContainer {
+    grid-column: 2;
+    grid-row: 2;
+    justify-self: center;
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-main);
+}
+
+.container > .booksContainer > .booksTable {
+    border-collapse: separate;
+    border-spacing: 0;
+    width: 100%;
+    height: 100%;
+    align-self: center;
+    justify-self: center;
+    background-color: inherit;
+}
+
+.container > .booksContainer > .booksTable > thead,
+.container > .booksContainer > .booksTable > tbody,
+.container > .booksContainer > .booksTable > thead tr,
+.container > .booksContainer > .booksTable > tbody tr,
+.container > .booksContainer > .booksTable > thead > tr th,
+.container > .booksContainer > .booksTable > tbody td {
+    background-color: inherit;
+}
+
+.container > .booksContainer > .booksTable > thead > tr th,
+.container > .booksContainer > .booksTable > tbody td {
+    border: 1px solid var(--border-color);
+}
+
+.container > .booksContainer > .booksTable > thead > tr th {   
+    font-weight: 900;
+    font-size: 20px;
+    padding: 6px;
+    text-align: center;
+}
+
+.container > .booksContainer > .booksTable > tbody td {
+    padding: 6px;
+    text-align: left;
+}
+
+.container > .footer {
+    grid-column: 1 / span 3;
+    grid-row: -1;
+    justify-self: center;
+    align-self: center;
+}
+
+.container > .footer > .footerButton {
+    border: none;
+    align-self: center;
+    justify-self: center;
 }
